fixed a few layout bugs

--- a/sass/layout/_templates.scss
+++ b/sass/layout/_templates.scss
@@ -39,7 +39,21 @@ section#content {
 /* Large screens */
 @media (min-width: 1030px) {
 
-    div#primary {
-        padding:4vw 4vw 0;
+    section#content {
+        margin-bottom:0;
+
+        & > main {
+            padding-bottom:4vw;
+        }
+
+        & > aside {
+            padding-right:4vw;
+            box-shadow:inset 0 0 80px 0 rgba(100,100,100,.3);
+        }
     }
+
+    div#primary {
+        padding:4vw 0 0 4vw;
+    }
+
 }
